--- a/market-ajh/templates/profile/index.html.twig
+++ b/market-ajh/templates/profile/index.html.twig
@@ -223,8 +223,39 @@
                             {% if commande.statut == 'En attente de livraison' %}
                                 <td class="py-2 px-4">
                                     <form action="{{ path('orders_mark_delivered', { id: commande.id }) }}" method="post">
-                                        <button type="submit" class="bg-VIOLET text-white px-4 py-2 rounded">Marquer comme livrée</button>
-                                    </form>
+                                        <button type="submit" class="bg-VIOLET text-white px-4 py-2 mb-4 rounded">Marquer comme livrée</button>
+                                     </form>
+                                    <!-- Confirmation Modal -->
+                                    {% if commande.idVendeur %}
+                                        <a href="{{ path('app_messages_conversation', {userId: commande.idVendeur.id}) }}" class="bg-VIOLET text-white px-4 mt-2 p-2 rounded py-2 rounded">Contacter le vendeur</a>
+                                    {% endif %}
+                                    <el-dialog>
+                                    <dialog id="confirmDeliverDialog_{{ commande.id }}" aria-labelledby="confirm-deliver-dialog-title" class="fixed inset-0 size-auto max-h-none max-w-none overflow-y-auto bg-transparent backdrop:bg-transparent">
+                                        <el-dialog-backdrop class="fixed inset-0 bg-gray-900/50 transition-opacity data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in"></el-dialog-backdrop>
+                                            <div tabindex="0" class="flex min-h-full items-end justify-center p-4 text-center focus:outline-none sm:items-center sm:p-0">
+                                                <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-GREEN text-left shadow-xl outline outline-offset-1 outline-white/10 transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
+                                                    <div class="bg-GREEN px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                                                        <div class="sm:flex sm:items-start">
+                                                            <div class="mt-3 text-center sm:mt-0 sm:text-left w-full">
+                                                                <h3 id="confirm-deliver-dialog-title" class="text-xl font-bold text-WHITE mb-4">Confirmer la livraison</h3>
+                                                                <div class="mb-4">
+                                                                    <p class="text-WHITE">Êtes-vous sûr de vouloir marquer cette commande comme livrée ?</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="bg-GREEN px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+                                                        <form method="post" action="{{ path('orders_mark_delivered', { id: commande.id }) }}">
+                                                            <button type="submit" class="inline-flex w-full justify-center rounded-md bg-VIOLET px-3 py-2 text-sm font-semibold text-WHITE hover:bg-purple-700 sm:ml-3 sm:w-auto">
+                                                                Confirmer
+                                                            </button>
+                                                        </form>
+                                                        <button type="button" command="close" commandfor="confirmDeliverDialog_{{ commande.id }}" class="mt-3 inline-flex w-full justify-center rounded-md bg-gray-500 px-3 py-2 text-sm font-semibold text-WHITE hover:bg-gray-600 sm:mt-0 sm:w-auto">Annuler</button>
+                                                    </div>
+                                                </el-dialog-panel>
+                                            </div>
+                                        </dialog>
+                                    </el-dialog>
                                 </td>
                             {% elseif commande.statut == 'Livrée'  and commande.avisCommande is empty %}
                                 <td class="py-2 px-4">
