correction d'un bug sur l'affichage des sauts de ligne dans les news

--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -260,7 +260,11 @@
         });
       })();
     </script>
-
+    <style>
+      dialog, dialog * {
+        white-space: pre-line;
+      }
+    </style>
     <style>
       .flash-message {
         transform: translateX(100%);
