--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -26,7 +26,7 @@
   >
     <!-- Navigation -->
     <nav class="bg-BLACK shadow-md p-4 relative z-50">
-      <div class="container mx-auto px-4 flex items-center justify-between">
+      <div class="w-full flex items-center justify-between px-4">
         <!-- Logo à gauche -->
         <a href="{{ app.user ? path('app_home') : path('app_welcome') }}" class="flex-shrink-0">
           <img src="{{ asset('build/images/logo_guilde.jpg') }}" alt="Logo" class="h-16 w-16 rounded-full border-2 border-WHITE" />
@@ -260,11 +260,6 @@
         });
       })();
     </script>
-    <style>
-      dialog, dialog * {
-        white-space: pre-line;
-      }
-    </style>
     <style>
       .flash-message {
         transform: translateX(100%);
