--- a/market-ajh/templates/registration/register.html.twig
+++ b/market-ajh/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inscription{% endblock %}
 
 {% block body %}
-<div class="flex-col flex justify-center items-center min-h-screen bg-GRAY">
+<div class="flex-col flex justify-center items-center min-h-screen">
     <div class="w-full max-w-md p-8 bg-GREEN text-WHITE rounded-lg shadow-lg">
         <h1 class="text-3xl font-bold mb-6 text-center">Inscription</h1>
 
@@ -12,7 +12,7 @@
         {{ form_start(registrationForm, {'attr': {'class': 'space-y-6'}}) }}
             <div class="space-y-2">
                 {{ form_row(registrationForm.username, {
-                    'attr': {'class': 'w-full px-4 py-2 rounded text-BLACK'},
+                    'attr': {'class': 'w-full px-4 py-2 rounded text-BLACK bg-WHITE'},
                     'label_attr': {'class': 'block mb-1 font-medium'}
                 }) }}
             </div>
@@ -20,7 +20,7 @@
             <div class="space-y-2">
                 {{ form_row(registrationForm.plainPassword, {
                     'label': 'Mot de passe',
-                    'attr': {'class': 'w-full px-4 py-2 rounded text-BLACK'},
+                    'attr': {'class': 'w-full px-4 py-2 rounded text-BLACK bg-WHITE'},
                     'label_attr': {'class': 'block mb-1 font-medium'}
                 }) }}
             </div>
